--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -68,7 +68,7 @@
  fra_house_god_title:0 "神の家"
  fra_house_god_desc:0 "[118.GetName]には、カトリック教会にとって最も称賛を受けた建築物がいくつかがある。歴史上最も有名な人物にも多く恵まれたこの都市は、もうすぐフランスとの圧倒的な差の前に屈服することになるだろう。"
  fra_secure_genoan_trade_title:1 "ジェノヴァの商業"
- fra_secure_genoan_trade_desc:0 "ジェノヴァ沿岸の商機を無視などできない。商人たちは、避けようもない硬貨の話をしており、それは10個の財布を十分に満たす程の量だ。この収入源を確保すれば、国内外の活動資金として極めて重要であることが証明されるだろう。"
+ fra_secure_genoan_trade_desc:0 "ジェノヴァ沿岸の商機を無視などできない。商人たちは、10個もの財布を満杯にする程の量の、逃せない硬貨の話をしている。この収入源を確保すれば、国内外の活動資金として極めて重要であることが証明されるだろう。"
  fra_expand_french_domain_title:0 "フランス領の拡大"
  fra_expand_french_domain_desc:0 "イタリアは常に大帝国の間で引き裂かれてきた。かつて神聖ローマ帝国の事実上の一部であった本地方は、政治的・軍事的に対立している国家との同盟を危うくしないよう、確実に手中におさめねばならない。"
  fra_sway_electorate_title:1 "[Root.GetPreviewColorFRA_HRE]選帝侯への働きかけ[Root.GetPreviewColorFRA_HRE_end]"
@@ -405,7 +405,7 @@
  fra_complete_via_opinion_alliance_and_trust_tt:1 "\n最後に、もし @BUR ブルゴーニュ王家との外交評価や同盟によってミッションを達成した場合、帝国事件§Yブルゴーニュ継承§!が発生した際に彼らが自国側につく可能性が高くなります。"
  fra_enable_war_on_the_empire_cb_tt:0 "帝国領を§Y少ないコスト§!で征服できる開戦事由§Y対帝国戦争§!が使用可能になります"
  fra_if_completed_via_control_tt:1 "戦争時に州を§G占領§!してミッションをクリアした場合、和平交渉での要求戦勝点コストが非常に安くなります"
- fra_alternatively_lose_10_devastation_and_gain_tt:0 "\n代わりに、平時にミッションを達成した場合、両州とも荒廃が§G10§!減少すると共に以下を獲得します："
+ fra_alternatively_lose_10_devastation_and_gain_tt:0 "\nもしくは、平時にミッションを達成した場合、両州とも荒廃が§G10§!減少すると共に以下を獲得します："
  fra_every_french_province_changes_to_francien_tt:0 "§Yフランス§!文化グループ全体が、§Yリンガ・フランカ§!の概念を推進する§Yフランシア§!に同化します。"
  fra_if_possible_gain_empire_else_10_permanent_pp_tt:0 "\n帝国では§Rない§!状態でこのミッションを達成した場合、帝国ランクに上がります。そうでなければ、恒久的に戦力投射を§G10§!獲得します。"
  fra_if_pro_190_opinion_and_100_trust_tt:2 "\n@PRO プロヴァンスが自国の従属国であり、彼らの我々への評価が§G190§!以上かつ信頼度が§G100§!の状態でミッションを達成した場合、以下の報酬を獲得します："
@@ -434,13 +434,13 @@
  fra_if_choose_to_break_habsburg_ring_by_conquering_swaths_of_the_germanic_provinces_tt:0 "§Y神聖ローマ帝国§!の征服を選択した場合、このミッションは、§Y北ドイツ§!と§Y南ドイツ§!の広大な領域を征服する機会をもたらします。"
  fra_if_choose_to_claim_emperorship_and_gain_unique_bonuses_that_will_help_us_shape_empire_tt:0 "\n一方で、シャルルマーニュの外套を取り戻すことを選択した場合、このルートは、自国が§Y皇帝位§!を請求する企てを助け、その最中に特別な独自ボーナスを持たせ、自国の歴史を書き換えるでしょう。"
  fra_if_choose_declaratio_galica_tt:0 "征服者としてドイツ領へ進軍することを選択した場合、このミッションは自国に強力なボーナスと§Y軍事覇権§!メカニクスの利用をもたらします"
- fra_if_choose_return_italy_to_hre_and_unique_mercenary_bonuses_tt:0 "\nあるいは、§Y皇帝§!ルートを選ぶことで、報酬として独自メカニクスを手に入れ、§Y影の王国§!を元に戻す手助けとなります。"
+ fra_if_choose_return_italy_to_hre_and_unique_mercenary_bonuses_tt:0 "\nもしくは、§Y皇帝§!ルートを選ぶことで、報酬として独自メカニクスを手に入れ、§Y影の王国§!を元に戻す手助けとなります。"
  fra_if_choose_dismantle_hre_tt:0 "§Y神聖ローマ帝国§!と敵対することを選択した場合、このミッションは神聖ローマ帝国解体の機会を与え、自国の他地域の発展を補完として§Yドイツ人§!移住者を利用できるようになります。"
  fra_if_choose_expand_the_versailles_as_the_center_of_military_operations_in_the_empire_and_solidify_our_dip_tt:0 "\n一方、§Y帝国§!を導く場合、ヴェルサイユ宮殿を自国の政治領域全体の軍事拠点として確立し、§Y帝国§!全域にわたる外交努力を強化できます"
  fra_upgrade_buildings_tt:0 "[125.GetName]の§Y海軍インフラ§!が先行してアップグレードされます"
  fra_organize_raid_parties_for_20_years_tt:0 "今後§G20§!年間、§Y沿岸の襲撃§!部隊を組織できます"
  fra_if_knights_exist_gain_tt:0 "@KNI 聖ヨハネ騎士団が存在§Rしない§!場合："
- fra_alternatively_tt:0 "\n§Tまたは§!："
+ fra_alternatively_tt:0 "\n§Tもしくは§!："
  fra_exploitation_of_neapolitan_lands_tt:0 "ナポリの地の開発は、ナポリ領の人たちが封建労働という形でフランス本土に移動するという人口の変化をもたらす可能性があります。"
  fra_if_diplomacy_tt:1 "このミッションを§M外交的§!手段で達成した場合、自国と自国の指定したイベリアの§M同盟国§!の双方が以下を獲得します："
  fra_as_long_as_we_maintain_the_alliance_desc:0 "同盟を維持する限り"
@@ -457,20 +457,20 @@
  fra_northern_italy_by_you_subject_or_papal_states_or_subject_tt:0 "§Y北イタリア§!を自国か自国の従属国（非朝貢国）、もしくは§Y教皇領§!か教皇領の従属国（非朝貢国）が領有している"
  fra_northern_italy_by_you_subject_tt:1 "§Y北イタリア§!を自国か自国の従属国（非朝貢国）が領有している"
  fra_cede_northern_italy_to_pope_coronation_and_tt:0 "§Y教皇庁§!と§M連携§!してミッションを達成した場合、教皇が自国の次の君主に§Y戴冠§!を行い、その統治期間中に特別なボーナスを与えます："
- fra_alternatively_gain_following_evolving_reward_tt:0 "\n代わりに、次の§M進化した§!報酬を獲得します："
+ fra_alternatively_gain_following_evolving_reward_tt:0 "\nそうでない場合、次の§M進化した§!報酬を獲得します："
  fra_if_lapdog_reward_tt:0 "§Y教皇庁§!と§M連携§!してミッションを達成した場合："
- fra_if_completed_via_conquest_tt:0 "\n代わりに、以下の報酬を獲得します："
+ fra_if_completed_via_conquest_tt:0 "\nそうでない場合、以下の報酬を獲得します："
  fra_every_level_0.5_dip_rep:0 "特別な顧問§Y作曲家§!の各レベルにて、さらに追加効果§G外交評判+0.5§!を得ます"
  FRA_FRENCH_PRESENCE_GENOA_KEY:0 "ジェノヴァにおけるフランスの存在感"
  fra_genoese_fleet_tt:0 "ジェノヴァ艦隊について自国が自由に使えます"
  fra_invested_in_papal_states_tt:0 "§Y3§!回以上§Y教皇領§!に投資した"
- fra_alternatively_modify_golden_march_and_tt:1 "\nあるいは、補正§Y黄金の行軍§!が領土管理限界§G+5%§!と強化されます"
+ fra_alternatively_modify_golden_march_and_tt:1 "\nそうでない場合、補正§Y黄金の行軍§!が領土管理限界§G+5%§!と強化されます"
  fra_destabilize_tt:0 "§Rこれは自領全域に深刻な結果をもたらすでしょう§!"
  fra_enable_italian_bookkeeping_privilege_tt:0 "市民階級の特権「§Y金融政策の統制§!」において、§R全ての君主力コスト§!のペナルティが発生しなくなります。"
  fra_if_aligned_with_pope_and_not_subject_exists_tt:0 "@PAP §Y教皇領§!と連携し、彼らが§Y独立§!している場合："
  fra_access_new_papal_bulls_tt:0 "§M新たな教皇勅書が利用可能になります§!"
  fra_if_aligned_and_pope_subject_already_tt:0 "\n@PAP §Y教皇領§!と連携し、彼らが既に自国に§Y従属§!している場合："
- fra_alternatively_evolve_golden_march_3_tt:1 "\n代わりに、補正「§Y黄金の行軍§!」は更に強化されます：\n君主の統治スキル§G+1§!"
+ fra_alternatively_evolve_golden_march_3_tt:1 "\nそうでない場合、補正「§Y黄金の行軍§!」は更に強化されます：\n君主の統治スキル§G+1§!"
  fra_remove_hre_ae_tt:1 "§Y神聖ローマ帝国§!の領邦国との§Y侵略的拡大§!が§G-10§!される。\n"
  fra_start_heirs_of_charlemagne_incident_tt:0 "現皇帝は「§lシャルルマーニュの後継者§!」から最後通牒を受け取ります。"
  fra_abdicate_leader_tt:0 "§Y神聖ローマ帝国§!の座を放棄するでしょう"
@@ -564,7 +564,7 @@
  fra_event_insight_204_tt:0 "\n§Gイベントインサイト§!\nこのイベントは、[Root.GetName]で最も輝かしく最古の大学の一つについて歴史を紡ぎ、[183.GetName]と条件で述べられた他の州にボーナスを与えます。"
  fra_event_insight_205_tt:0 "\n§Gイベントインサイト§!\nこのイベントは、エルサレム王国 @KOJ を復活させるか、自国の統治者を教皇庁唯一の首長として戴く機会を与えてくれます"
  fra_event_insight_102_tt:0 "\n§Gイベントインサイト§!\nこのイベントでは、§Y神聖ローマ帝国§!の§Y皇帝位§!へ立候補する、もしくは帝国自身の解体を目標とする機会を得ます。"
- fra_event_insight_202_tt:0 "\n§Gイベントインサイト§!\nこのイベントは、地中海におけるフランスの最も重要な海軍・海洋の中心地ーの一つを中心として物語が描かれます\n"
+ fra_event_insight_202_tt:0 "\n§Gイベントインサイト§!\nこのイベントは、地中海におけるフランスの最も重要な海軍・海洋の中心地の一つをめぐる物語が描かれます\n"
  fra_event_insight_113_tt:0 "\n§Gイベントインサイト§!\nこのイベントは、自国の王室の管轄下にあるナポリ領の運命を決定する機会を与えてくれます"
  fra_event_insight_120_tt:0 "\n§Gイベントインサイト§!\nこのイベントは、教皇との関係を強固にし、フランス王家のもとで彼らの永遠の忠誠を要求します"
  iron_crowned_personality:0 "鉄王冠を戴冠した"
@@ -672,7 +672,7 @@
  mng_explo_ideas_tt:0 "§Y探検アイデア§!が有効の状態でミッションを達成した場合："
  mng_trade_ideas_tt:0 "\n§Y交易アイデア§!が有効の状態でミッションを達成した場合："
  mng_estates_govcap_now_grants_another_50_gov_cap_tt:0 "自領の地権を与えることで§Y階級と協力§!することを選択した場合、その特権は§G追加§!で§G安定度コスト削減§!と以下を獲得します："
- mng_alternatively_pop_census_improved:0 "\nあるいは、§Y人口調査の勅令§!はさらに月間統治力を§G+1§!し、以下を獲得します："
+ mng_alternatively_pop_census_improved:0 "\nそうでない場合、§Y人口調査の勅令§!はさらに月間統治力を§G+1§!し、以下を獲得します："
  mng_exam_system_reward_tt:1 "政府改革の§Y科挙制度§!を制定している状態でミッションを完了した場合、以下を獲得します：\n"
  mng_cmb_reward_tt:2 "\nもしくは、他のレベル3政府改革を選んでミッションを達成した場合、§R250§!の政府改革進捗度を消費して、それに見合う報酬を獲得します：\n\n§M中央集権化された官僚機構§!：補正「§Y行政の過剰拡大§!」の影響減衰、最低自治度§G-5%§!"
  mng_db_reward_1_tt:1 "\n§M地方分権化した官僚機構§!："
@@ -687,15 +687,15 @@
  mng_25_mp_per_ally_tt:0 "§Y同盟§!1ヶ国につき§Y25§! £adm£ £dip£ £mil£ を獲得する"
  mng_all_hordes_pacified_tt:1 "隣接する全遊牧民：\n自国と以下の条件のいずれかを満たす：\n同盟国もしくは従属国\n以下の条件のいずれかを満たす：\n - 独立欲求が25%未満\n - 朝貢相互作用で貢物を受けたことがある\n - 我々への評価が150以上"
  mng_if_completed_via_diplomacy_tt:0 "外交によってミッションを完了した場合："
- mng_if_completed_via_conquest_tt:0 "\nあるいは、征服によってミッションを完了した場合："
+ mng_if_completed_via_conquest_tt:0 "\nもしくは、征服によってミッションを完了した場合："
  mng_enable_tribes_estate_tt:0 "§Y部族§!階級を有効化"
  mng_relations_gift_reward_tt:0 "§Y外交関係§!によってミッションを達成した場合："
- mng_else_if_tributary_tt:0 "\nあるいは、[677.GetName]の領有国が既に自国の朝貢国である場合："
+ mng_else_if_tributary_tt:0 "\nもしくは、[677.GetName]の領有国が既に自国の朝貢国である場合："
  as_long_as_we_or_subject_owns_this_province_desc:1 "その州を§Y従属国§!が領有する限り"
  mng_inward_perfection_reward_tt:0 "階級特権の内的爛熟を制定してこのミッションを達成した場合、特権がさらに強化され、以下の追加補正を獲得します：\n全階級の忠誠均衡値：§G+5%§!\n君主の統治スキル：§G+1§!\n建設可能数：§G+1§!\n大事業のアップグレードコスト：§G-10%§!"
  mng_trib_cb_every_nation_applicable_tt:0 "ミッション条件によって、適用可能な国家全てに対し開戦事由§Y朝貢国化の強制§!を獲得します"
  mng_subj_cb_every_nation_applicable_tt:0 "ミッション条件によって、適用可能な国家全てに対し開戦事由§Y属国化§!を獲得します"
- mng_no_inward_perfection_reward_tt:0 "\n代わりに、階級特権§Y外的爛熟§!が利用できるようになり、以下の報酬を獲得します："
+ mng_no_inward_perfection_reward_tt:0 "\nそうでない場合、階級特権§Y外的爛熟§!が利用できるようになり、以下の報酬を獲得します："
  mng_all_provinces_in_mission_req_tt:0 "ミッション条件を満たす全州："
  mng_flood_events_less_devastating_tt:0 "\n§Y黄河に沿って発生する洪水が甚大ではなくなるでしょう§!"
  mng_inform_about_potosi_tt:1 "\n§Yセロ・リコ・デル・ポトシ§!は、自国の新たな§Y税制改革§!に必要なものを満たすために、銀の§Y生産§!を大幅に増やすでしょう。"
@@ -705,7 +705,7 @@
  mng_shengshi_reward_tt:0 "\n§M盛世の報酬§!："
  mng_passing_reform_grants_10_estate_loyalty_tt:0 "§Y帝国の改革§!を通過させることで、全階級で忠誠を§G10§!獲得"
  mng_dip_korea_reward_tt:0 "§Y外交的§!にミッションを完了した場合："
- mng_complete_via_owning_areas_tt:0 "\n代わりに、§Y軍事的§!にミッションを完了した場合、朝鮮文化を§Y中国化§!し、以下の報酬を獲得します："
+ mng_complete_via_owning_areas_tt:0 "\nもしくは、§Y軍事的§!にミッションを完了した場合、朝鮮文化を§Y中国化§!し、以下の報酬を獲得します："
  mng_repeal_requirements_tt:0 "現行の§Y海禁政策§!の§G撤廃§!を選択する場合、以下の条件が適用されます："
  mng_improve_requirements_tt:0 "現行の§Y海禁政策§!の§G改善§!を選択する場合、以下の条件が適用されます："
  mng_repeal_and_replace_tt:0 "§Y海禁政策§!の撤廃を選んだ場合、以下に置き換えられます："
@@ -734,7 +734,7 @@
  until_we_complete_the_appropriate_missions_desc:0 "海禁政策に関連する適切なミッションを達成するまで"
  mng_closed_trade_tt:0 "\nこのルートは、現行の鎖国政策を§Y改善§!するミッションを可能にし、自国市場を強化し、外部の影響からより一層保護するのに役立ちます"
  mng_open_trade_tt:0 "\nこのルートは、自国市場を開放し、自身の港で外国取引による利益獲得を支援することで、政策の§Y撤廃§!に役立つミッションを利用可能にします"
- mng_trib_reward_tt:0 "\nあるいは、§Y朝貢国§!を有してミッションを達成した場合："
+ mng_trib_reward_tt:0 "\nもしくは、§Y朝貢国§!を有してミッションを達成した場合："
  mng_may_enact_single_whip_reform:0 "\n§Y中華皇帝である場合、一条鞭法改革を法典化できるでしょう§!"
  empty_line_tt:0 " "
  mng_reduce_starting_malus_by_10_tt:0 "国家補正「§Y行政の過剰拡大§!」のマイナス効果を§G-5§!に減らして下さい"
@@ -1423,7 +1423,7 @@
  chi_strongest_warlord_tt:0 "中国亜大陸内で最大の§Y開発度§!と§Y陸軍§!を有している"
  chi_subject_reward_tt:0 "従属国の§Y数§!を増やし、自国が§Y中国皇帝§!である状態でミッションを完了した場合、従属国1ヶ国につき天命を§G10§!獲得し、以下の報酬を獲得します："
  chi_mana_per_subject_tt:0 "従属国の§Y数§!を増やすことでミッションを達成した場合、従属国1ヶ国あたり§Y25§!の£adm£ £dip£ £mil£ を獲得し、以下の報酬を獲得します："
- chi_outwards_expansion_reward_tt:0 "\nあるいは、自国の開発度を§G1000§!以上増やした場合は以下を獲得します："
+ chi_outwards_expansion_reward_tt:0 "\nもしくは、自国の開発度を§G1000§!以上増やした場合は以下を獲得します："
  chi_permanent_pp:0 "この戦力投射は§Y永続§!です。"
  chi_every_center_of_trade_or_marketplace_gets_tt:1 "\n§Y交易中心地§!がある領有州はすべて、以下のボーナスを得ます："
  chi_25_ws_against_overlord_or_more_tt:0 "\n§Y独立戦争§!中に戦勝点が§G25%§!以上の状態でミッションを達成した場合："
@@ -3291,7 +3291,7 @@
  CB_ALLOWED_po_establish_eyalet:0 "エヤレトの設立"
  PEACE_po_establish_eyalet:0 "エヤレトの設立"
  po_annex_tribe:0 "移住部族の併合"
- po_annex_tribe_desc:0 "[From.GetName]は[Root.GetName]により併合される"
+ po_annex_tribe_desc:0 "[From.GetName]は[Root.GetName]により併合されます。"
  CB_ALLOWED_po_annex_tribe:0 "移住部族の併合"
  PEACE_po_annex_tribe:0 "移住部族の併合"
  po_establish_trade_protectorate:0 "交易保護国の設立"
@@ -4917,7 +4917,7 @@
  gbr_conquer_inland_india_at:0 "§Yインド§!の領有州の内、最大§Y10§!で以下の効果を獲得します："
  gbr_masters_of_india_title:1 "[Root.GetPreviewColorGBR]インドの主人[Root.GetPreviewColorGBR_end]"
  gbr_masters_of_india_desc:0 "インド亜大陸は[Root.GetAdjective][Root.GovernmentName]の力に屈している。[Root.GetUsableName]の栄光のためにインドの実りを吸い上げよう！"
- gbr_masters_of_india_at:0 "§Y営利企業§!および§Y保護国§!の交易品生産補正が§G+15.0%§!されます。\n§Y営利企業§!は宗主国に対し、非主要交易ノードでの交易ペナルティーを§G-75.0%§!させ、交易効率を§G+5.0%§!させます。"
+ gbr_masters_of_india_at:0 "§Y営利企業§!および§Y保護国§!の交易品生産補正が§G+15.0%§!されます。\n§Y営利企業§!は宗主国に対し、非交易首都ノードでの交易ペナルティーを§G-75.0%§!させ、交易効率を§G+5.0%§!させます。"
  gbr_ave_the_royal_court_title:0 "王宮"
  gbr_ave_the_royal_court_desc:0 "[Root.Monarch.GetTitle]は顧問なしでは何者でもない。[Root.GetUsableName]の未来をどう見据えているかによらず、有能な顧問は常に必要だ。"
  gbr_allies_on_the_mainland_title:1 "[Root.GetPreviewColorGBR]大陸同盟[Root.GetPreviewColorGBR_end]"
@@ -5354,7 +5354,7 @@
  gbr_influence_of_the_trade_company:0 "交易会社の影響"
  desc_gbr_influence_of_the_trade_company:0 "この州は、強力な貿易会社の直接の影響圏にある。"
  gbr_emperor_of_india:0 "インドの支配者"
- desc_gbr_emperor_of_india:0 "インドの富は我らのものだ！正しく、我々はインドの主人であり、その富から大きな利益を得るだろう。\n\n§Y営利企業§!および§Y保護国§!は、交易品生産補正が§G+15.0%§!されます。\n§Y営利企業§!は宗主国に対し、非主要交易ノードでの交易ペナルティーを§G-75.0%§!させ、交易効率を§G+10.0%§!させます。"
+ desc_gbr_emperor_of_india:0 "インドの富は我らのものだ！正しく、我々はインドの主人であり、その富から大きな利益を得るだろう。\n\n§Y営利企業§!および§Y保護国§!は、交易品生産補正が§G+15.0%§!されます。\n§Y営利企業§!は宗主国に対し、非交易首都ノードでの交易ペナルティーを§G-75.0%§!させ、交易効率を§G+10.0%§!させます。"
  gbr_emperor_of_india_subject_bonus:0 "インドの支配者"
  gbr_emperor_of_india_overlord_bonus:0 "インドの支配者"
  ave_imperial_favoritism:0 "帝国の寵愛"
@@ -5849,7 +5849,7 @@
  jap_dip_advisor_culture_conversion_cost_tt:1 "\n§Y朝鮮文化§!を受容せずミッションを完了した場合、§Y外交§!顧問の各レベルで文化転向コスト§G-5%§!を獲得します。"
  enable_korean_palace_tt:0 "報酬として記念碑が有効となります"
  jap_accept_korean_culture_lev_tt:0 "\nもしくは、§Y朝鮮§!文化を受容済みの場合、大事業§Y景福宮§!が利用可能になります。"
- jap_accept_korean_culture_nonlev_tt:0 "\n代わりに、§Y朝鮮§!文化を受容している場合、以下の報酬を獲得します："
+ jap_accept_korean_culture_nonlev_tt:0 "\nもしくは、§Y朝鮮§!文化を受容している場合、以下の報酬を獲得します："
  jap_conquest_of_china_cb_tt:0 "\n開戦事由「§Y中華の征服§!」を利用可能になります"
  conquer_china_cb:0 "中華の征服"
  conquer_china_cb_desc:1 "中国は我々のものだ！"
