--- a/source/localisation/emperor_revolutions_l_english.yml
+++ b/source/localisation/emperor_revolutions_l_english.yml
@@ -131,7 +131,7 @@
  center_of_revolution.1001.A:1 "彼らは[first_revolution_center.GetCapitalName]と同じ目に遭うだろう！"
  center_of_revolution.1001.B:0 "革命万歳！"
  center_of_revolution.1500.name:0 "革命の終結"
- center_of_revolution.1500.desc:0 "[From.GetUsableName]の軍勢は[Root.GetAdjective]革命軍を完全に打ち負かした！容赦ない理想主義者狩りが行われる中、静かな多数派は彼らの古い君主主義の象徴を再び引っ張り出すことを始めている。"
+ center_of_revolution.1500.desc:0 "[From.GetUsableName]の軍勢は[Root.GetAdjective]革命軍を完全に打ち負かした！容赦ない理想主義者狩りが行われる中、静かな多数派は彼らの古い君主主義の象徴を再び引っ張り出そうとしている。"
  center_of_revolution.1500.A:0 "国王万歳！"
  center_of_revolution.2000.name:0 "穀物交易の制限？"
  center_of_revolution.2000.desc:0 "穀物商人は、彼らの交易に課せられた厳しい制限のもとで長い間苦しんでおり、その中には価格管理や彼らの製品の純度の検査などがある。彼らは、本質的に彼らに課せられたほとんどの制限を解除する、レッセフェール（自由放任）政策を実施することにより、穀物交易からの利益、ひいては我々の税収を大幅に増加させるという提案を発表した。\n\nしかしながら、他の人々は、これらの制限は人々の食料を入手可能な価格に保証することを意図するものであり、その多くは穀物商人を「人民の最も残酷な敵」と見なし、彼らが小麦粉にチョークや砕いた骨を混ぜること、そして人々の苦しみから金を稼ぐために積極的に価格を膨らませることを考えていると指摘している。これが事実となれば、穀物商人に自由を与えたと見られるのは危険かもしれない…"
