--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -921,11 +921,11 @@
  EVTOPTA1051:0 "参加の準備をする。"
  EVTOPTB1051:0 "中立を保つ。"
  EVTNAME1052:0 "神聖ローマ帝国を放棄"
- EVTDESC1052:0 "神聖ローマ帝国内の宗教的および政治的な絶え間ない争いは、$PROVINCENAME$の人々の士気を枯渇させている。皇帝との関係は常に冷え込んでおり、多くの人は帝国を離れることが$PROVINCENAME$の最善の利益になると考えている。"
+ EVTDESC1052:0 "神聖ローマ帝国内では宗教的な争いや政治的な争いが絶え間なく続いており、$PROVINCENAME$の人々の気力は低下している。皇帝との関係は史上最低に達し、多くの人は帝国を離れることが$PROVINCENAME$の最善の利益になると考えている。"
  EVTOPTA1052:0 "帝国から離脱する。"
  EVTOPTB1052:0 "関係の改善を試みる。"
  EVTNAME1053:0 "神聖ローマ帝国を放棄"
- EVTDESC1053:0 "神聖ローマ帝国内の宗教的および政治的な絶え間ない争いは、$PROVINCENAME$の人々の士気を枯渇させている。皇帝との関係は常に冷え込んでおり、$MONARCH$の不名誉な評判は我々の状況を改善していない。多くの人は帝国を離れることが$PROVINCENAME$の最善の利益になると考えている。"
+ EVTDESC1053:0 "神聖ローマ帝国内では宗教的な争いや政治的な争いが絶え間なく続いており、$PROVINCENAME$の人々の気力は低下している。皇帝との関係は史上最低に達し、$MONARCH$の不名誉な評判は我々の状況を改善していない。多くの人は帝国を離れることが$PROVINCENAME$の最善の利益になると考えている。"
  EVTOPTA1053:0 "帝国から離脱する。"
  EVTOPTB1053:0 "関係の改善を試みる。"
  EVTNAME1061:0 "自由への願望"
