--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -6774,7 +6774,7 @@
  NEW_ARMY_PROFESSIONALISM_ABILITY_HEADER:0 "$MESSENGER$"
  NEW_ARMY_PROFESSIONALISM_ABILITY_1:0 "軍熟練度のレベルアップ"
  NEW_ARMY_PROFESSIONALISM_ABILITY_2:0 "我が軍の熟練度がレベルアップしました。"
- NEW_ARMY_PROFESSIONALISM_ABILITY_3:1 "我々は、以下の能力を獲得しています："
+ NEW_ARMY_PROFESSIONALISM_ABILITY_3:1 "我々は、以下の能力を獲得します："
  NEW_ARMY_PROFESSIONALISM_ABILITY_5:0 "$ABILITY$"
  NEW_ARMY_PROFESSIONALISM_ABILITY_LOG:0 "軍熟練度レベルアップ"
  NEW_ARMY_PROFESSIONALISM_ABILITY_BTN1:0 "OK"
