--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -259,7 +259,7 @@
  personality_events.22.a:0 "強い方になりそうだ。"
  personality_events.22.b:0 "もちろん聡明な方だ。"
  personality_events.23.t:0 "他人の過ちから学ぶ"
- personality_events.23.d:0 "[Root.Monarch.GetName]は、[Root.Monarch.GetHerHim]の前に来た人物の助言に耳を傾け、経験豊富な顧問と[Root.Monarch.GetHerselfHimself]を囲むことは、常にそれを美徳と考えてきた。しかし、[Root.Monarch.GetHerHim]は[Root.Heir.GetName]が[Root.GetName]の支配に何が必要であるかを完全には理解できないかもしれないことを懸念している。いずれ、[Root.Heir.GetName]はそれを担う責任があり、その時点で、[Root.Heir.GetSheHe]が支配者としての課題をより徹底的に取り入れていることで、おそらく最善の結果となるだろう。"
+ personality_events.23.d:0 "[Root.Monarch.GetName]は、[Root.Monarch.GetHerHim]の前に参上した人々の助言に耳を傾け、経験豊富な助言者で[Root.Monarch.GetHerselfHimself]を囲むことを美徳だと常々考えてきた。しかし[Root.Monarch.GetHerHim]は、[Root.Heir.GetName]が[Root.GetName]の支配に何が必要であるかを十分に理解していないのではないかと懸念している。いずれ、[Root.Heir.GetName]はそれを担う責任があり、その時のために、[Root.Heir.GetSheHe]に支配者としての課題をもっと徹底的に取り入れさせた方が、おそらく最善の結果となるだろう。"
  personality_events.23.a:0 "統治について[Root.Heir.GetHerHim]に教える必要がある"
  personality_events.23.b:0 "外交について[Root.Heir.GetHerHim]に教える必要がある"
  personality_events.23.c:0 "戦争について[Root.Heir.GetHerHim]に教える必要がある"
@@ -703,7 +703,7 @@
  strict_drillmaster_personality_die_desc:0 "[GetHerHis]の教えが、未来の将軍たちの偉大さを鼓舞しますように。"
  naval_strategist_personality_die_desc:0 "海における[GetHerHisCap]の戦略は、多くの命を救いました。"
  inspirational_captain_personality_die_desc:0 "[GetHerHisCap]の感動的な演説は、何世代にもわたって船乗りの記憶に残ることでしょう。"
- naval_cannoneer_personality_die_desc:0 "私たちの砲音は、[GetHerHis]の指令の時ほどうるさくはないでしょう。"
+ naval_cannoneer_personality_die_desc:0 "私たちの砲音は、[GetHerHis]が指令していた時ほど轟音を立てることはもう今後ないでしょう。"
  wooden_waller_personality_die_desc:0 "[GetHerHisCap]の対決戦法は、他の船なら沈んでしまうような場所でも、私たちを勝利に導いてくれました。"
  cunning_navigator_personality_die_desc:0 "[GetHerHisCap]の航海術は、多くの水兵を救いました。"
  cuirassier_leader_personality:0 "胸甲騎兵の指揮官"
