--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -597,13 +597,13 @@
  PROV_ADJ607:0 "ヴィジャヤ"
  PROV_ADJ608:1 "アッタプー"
  PROV_ADJ609:0 "アンコール"
- PROV_ADJ610:0 "タイン・ホア"
+ PROV_ADJ610:0 "タインホア"
  PROV_ADJ611:0 "シッホタボン"
  PROV_ADJ612:0 "コラート"
  PROV_ADJ613:0 "トンキン"
  PROV_ADJ614:0 "ヴィエンチャン"
  PROV_ADJ615:0 "ルアン・パバーン"
- PROV_ADJ616:0 "カオ・バン"
+ PROV_ADJ616:0 "カオバン"
  PROV_ADJ617:1 "クタラジャ"
  PROV_ADJ618:1 "リアウ"
  PROV_ADJ619:0 "バタク"
